CHANGELOG
=========

0.4.0
-----

* Restore public access for `TypeAlias.getValue()`

0.3.0
-----

* `TypeAlias.getValue()` removed in favour of using `map()`

0.2.0
-----

* `TypeAlias.getValue()` is not `final`
* Added `TypeAlias.map()`
* `Mon.map()` and `Mon.flatMap()` are `final`
* Codacy Quality clean up

0.1.0
-----

* Add `TypeAlias<T>`
* Add `Functor<T>`
* Add `Identity<T>`
* Add `Mon<T>`